[gd_scene load_steps=7 format=3 uid="uid://c2f3cohs4curo"]

[ext_resource type="Texture2D" uid="uid://yr0i80ok8x2k" path="res://sprites/Level/AsteroidsAndPlanets/Asteroids.png" id="1"]
[ext_resource type="Script" path="res://Scripts/Asteroid.gd" id="1_yjsp3"]
[ext_resource type="Texture2D" uid="uid://dtrmuugfu1rke" path="res://sprites/Level/AsteroidsAndPlanets/asteroid_b4.png" id="2"]
[ext_resource type="Script" path="res://Scripts/AsteroidArea.gd" id="2_fbhio"]
[ext_resource type="AudioStream" uid="uid://b7ujbalks37lp" path="res://sounds/fx/hits/hit_003.wav" id="4"]
[ext_resource type="Material" uid="uid://bpicqlbrjta04" path="res://materials/particles/asteroid_particles.tres" id="4_gmqxy"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_yjsp3")

[node name="Area2D" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("2_fbhio")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-1, 21, 5, 21, 19, 11, 20, -3, 3, -19, -11, -21, -20, -11, -20, -5, -17, 10)

[node name="Asteroid4" type="Sprite2D" parent="Area2D"]
texture_filter = 1
texture = ExtResource("1")
region_enabled = true
region_rect = Rect2(13, 74, 40, 42)

[node name="ExplosionParticles" type="GPUParticles2D" parent="."]
texture_filter = 1
emitting = false
amount = 12
process_material = ExtResource("4_gmqxy")
texture = ExtResource("2")
lifetime = 2.0
one_shot = true
explosiveness = 1.0

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")
volume_db = -6.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_body_entered"]
